eclipse-workspace/Surya Dev Org/src/objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Cust_PO_Date__c</fullName>
        <label>Cust PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Purchase Order</relationshipLabel>
        <relationshipName>Purchase_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Po_Received_Date__c</fullName>
        <label>Po Received Date</label>
        <type>Date</type>
    </fields>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO-{0000000000}</displayFormat>
        <label>PO Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>